# ONNX-Splitpoint-Tool

./: .gitignore  LICENSE  README.md  README.txt  analyse_and_split.py  analyse_and_split_gui.py  download_model_zoo_examples.py  model_zoo_manifest.json  pt_to_onnx.py  pyproject.toml  requirements.txt  start_gui.sh
docs/: ARTIFACTS_AND_POSTPROCESSING_CONTRACT.md
onnx_splitpoint_tool/: __init__.py  accelerator_specs.py  api.py  benchmark_case_utils.py  cli.py  core_analysis.py  core_params.py  cuda_probe.py  dependency_bootstrap.py  gui_app.py  hailo_backend.py  log_retention.py  log_runtime.py  log_utils.py  memory_utils.py  metrics.py  objective_scoring.py  onnx_utils.py  paths.py  pruning.py  resources_utils.py  split_export.py  split_export_graph.py  split_export_runners.py  split_export_validation.py  system_model.py  units.py  workdir.py  wsl_hailo_build_hef.py  wsl_hailo_check.py  wsl_inline_build_hef  wsl_inline_check
onnx_splitpoint_tool/benchmark/: analysis.py  classification_validation_presets.py  decision_summary.py  evaluation_profiles.py  (+13 more)
scripts/: activate_hailo_dfc_venv.sh  build_classification_validation_preset.py  export_vision_models_to_onnx.py  prepare_validation_sets.py  provision_hailo_dfcs_wsl.sh  setup_hailo_dfc_wsl.sh
tests/: test_background_jobs_ui_regressions.py  test_benchmark_analysis_comparison_regressions.py  test_benchmark_analysis_hailo_context_regressions.py  test_benchmark_analysis_tab_cache_regressions.py  test_benchmark_backfill_and_gui_log_regressions.py  test_benchmark_case_rejection_utils.py  test_benchmark_csv_and_spinner_regressions.py  test_benchmark_generate_worker_snapshot_regressions.py  test_benchmark_hailo_soft_reject_regressions.py  test_benchmark_objective_metadata_increment3.py  test_benchmark_research_summary_regressions.py  test_benchmark_suite_template_partial_variant_pruning_regressions.py  test_candidate_selection_column_mapping_regression.py  test_classification_harness.py  test_core_smoke.py  test_gui_benchmark_workflow_refactor_regressions.py  test_gui_hailo_fallback_marker_regressions.py  test_gui_no_model_decode.py  test_gui_param_mapping_contract.py  test_gui_tree_selection_segfault_regression.py  test_gui_worker_analysis_shadowing_regression.py  test_hailo_backend.py  test_hailo_benchmark_candidate_filter_regressions.py  test_hailo_canonical_io_alias_regressions.py  test_hailo_contiguous_staging_regressions.py  test_hailo_full_hef_policy_regressions.py  test_hailo_full_model_preflight_regressions.py  test_hailo_gui_backend_regressions.py  test_hailo_gui_kwargs_compat.py  test_hailo_hef_runtime_regressions.py  test_hailo_image_calib_and_logs_panel_regressions.py  test_hailo_parse_feedback_regressions.py  test_hailo_part2_activation_calib_regressions.py  test_hailo_part2_concat_sanity_and_ranking_regressions.py  test_hailo_part2_parser_blocker_prefilter_regressions.py  test_hailo_part2_plan_downgrade_and_suggested_outputs.py  test_hailo_partial_keep_and_boundary_policy_regressions.py  test_hailo_plan_aware_preflight_no_onnx.py  test_hailo_plan_aware_preflight_regressions.py  test_hailo_proxy_and_boundary_regressions.py  (+45 more)
(+130 files in other folders)
