[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx-splitpoint-tool"
version = "0.10.119"
description = "Single-split boundary analysis for ONNX graphs (GUI + CLI)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "onnx",
  "numpy",
  "matplotlib",
  "pillow",
]

[project.optional-dependencies]
runtime = ["onnxruntime"]

[project.scripts]
onnx-splitpoint = "onnx_splitpoint_tool.cli:main"
onnx-splitpoint-gui = "onnx_splitpoint_tool.gui_app:main"

[tool.setuptools]
packages = [
  "onnx_splitpoint_tool",
  "onnx_splitpoint_tool.gui",
  "onnx_splitpoint_tool.gui.panels",
  "onnx_splitpoint_tool.gui.render",
  "onnx_splitpoint_tool.gui.widgets",
  "onnx_splitpoint_tool.hailo",
]

[tool.setuptools.package-data]
onnx_splitpoint_tool = [
  "resources/*.json",
  "resources/templates/*.txt",
  "resources/hailo/*.json",
  "resources/hailo/**/*.md",
  "resources/hailo/**/.gitkeep",
]
