[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx-splitpoint-tool"
version = "0.10.208"
description = "Single-split boundary analysis for ONNX graphs (GUI + CLI)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "onnx",
  "numpy",
  "matplotlib",
  "pillow",
  "PyYAML",
  "jsonschema",
]

[project.optional-dependencies]
runtime = ["onnxruntime"]

[project.scripts]
onnx-splitpoint = "onnx_splitpoint_tool.cli:main"
onnx-splitpoint-gui = "onnx_splitpoint_tool.gui_app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["onnx_splitpoint_tool*"]

[tool.setuptools.package-data]
onnx_splitpoint_tool = [
  "resources/*.json",
  "resources/**/*.json",
  "resources/**/*.md",
  "resources/**/*.txt",
  "runners/assets/*",
  "runners/harness/*.json",
  "runners/harness/*.txt",
  # Helper scripts invoked inside WSL / managed DFC venv.
  "wsl_inline_check",
  "wsl_inline_build_hef",
]
